--- a/index.html
+++ b/index.html
@@ -12,16 +12,8 @@
   </header>
 
   <main>
-    <div class="game-grid">
-      <a href="games/flappybird.html" class="game-card">
-        <img src="assets/images/flappy.png" alt="Flappy Bird">
-        <h3>Flappy Bird</h3>
-      </a>
-      <a href="games/snake.html" class="game-card">
-        <img src="assets/images/snake.png" alt="Snake">
-        <h3>Snake</h3>
-      </a>
-    </div>
+    <div class="game-grid" id="game-grid"></div>
+    <div id="game-container"></div>
   </main>
 
   <script src="script.js"></script>
