--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
   <main>
     <div class="game-grid" id="game-grid"></div>
-    <div id="game-container"></div>
   </main>
+
+  <footer>
+    <p>© 2025 GameHub</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
