--- a/games/flappy/index.html
+++ b/games/flappy/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Flappy Bird</title>
-	</head>
-	<body>
-		<script src="js/game.js"></script>
-	</body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flappy Bird (Scratch)</title>
+  <style>
+    body {
+      margin: 0;
+      background: #222;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    iframe {
+      width: 480px;
+      height: 360px;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <iframe 
+    src="https://scratch.mit.edu/projects/1000415836/embed" 
+    allowtransparency="true" 
+    frameborder="0" 
+    scrolling="no" 
+    allowfullscreen>
+  </iframe>
+</body>
 </html>
