--- a/index.html
+++ b/index.html
@@ -4,36 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game Hub</title>
-  <style>
-    body { font-family: sans-serif; background: #f0f0f0; padding: 20px; }
-    #game-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); gap: 20px; }
-    .game-card { display: block; text-align: center; background: white; padding: 10px; border-radius: 10px; text-decoration: none; color: black; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    .game-card img { width: 100%; border-radius: 10px; }
-    .game-card h3 { margin: 10px 0 0; font-size: 16px; }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>My Game Hub</h1>
   <div id="game-grid"></div>
 
-  <script>
-    const games = [
-      { name: "Flappy Bird", thumbnail: "assets/images/flappy.png", path: "games/flappy/index.html" },
-      { name: "Super Mario 64", thumbnail: "assets/images/sm64.jpeg", path: "games/SuperMario64/index.html" }
-    ];
-
-    const grid = document.getElementById('game-grid');
-
-    games.forEach(game => {
-      const card = document.createElement('a');
-      card.href = game.path; // use path as-is, no extra .html
-      card.className = 'game-card';
-      card.innerHTML = `
-        <img src="${game.thumbnail}" alt="${game.name}">
-        <h3>${game.name}</h3>
-      `;
-      grid.appendChild(card);
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
